# diagrams-qrcode

./: .gitignore  LICENSE  README.md  diagrams-qrcode.cabal  qrcode-diagrams.cabal
examples/: using-haskell-qrencode.hs  using-qrcode.hs
src/Diagrams/: QRCode.hs
